Removed the coinwallet and tokenwallet from user canister and moved it to the token canister, added code to fetch the data from token canister and to update the tokenlist and recordlist. Added inter canister communication between user canister and token canister.

--- a/src/crowdrecords_assets/src/index.html
+++ b/src/crowdrecords_assets/src/index.html
@@ -9,6 +9,11 @@
     <link type="text/css" rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <section id="profileSection" hidden>
+      <label for="userPrincipal">User Principal &nbsp;</label>
+      <input id="userPrincipal" alt="User Principal" type="text" disabled />
+      <button id="logout">logout</button>
+    </section>
     <img src="logo.png" alt="DFINITY logo" />
     <!-- <section>
       <label for="username">Enter your user name: &nbsp;</label>
@@ -33,5 +38,7 @@
       <button id="getUserButton">Click Me!</button>
     </section>
     <section id="getUserResult"></section>
+
+    <button type="button" id="loginButton">Log in</button>
   </body>
 </html>
